# fake-data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  columns_metadata.csv  customer.csv  customer_account.csv  customer_account_old_long.csv  generate-fake-data.py  install_vendored.py  linx-data-contract-spec.yaml  metadata.csv  output.csv  pyproject.toml  requirements.txt
.github/workflows/: unit-testing.yml
datacontracts/: customer.yaml
fake_data/: generate_fake_data.py
fake_data/metadata/: commands.py  metadata_cache.py  metadata_csv_parser.py
tests/: conftest.py  test_cli.py
tests/metadata/: test_metadata_cache.py  test_metadata_csv_parser.py
