[tool.poetry]
name = "fake-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
generate-fake-data = "fake_data.generate_fake_data:app"



[tool.poetry.dependencies]
python = "^3.11"
faker = "^22.6.0"
typer = "^0.9.0"
duckdb = "^0.9.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
