[tool.poetry]
name = "fake-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
generate-fake-data = "fake_data.generate_fake_data:app"
# new command name - less verby
fake-my-data = "fake_data.generate_fake_data:app"



[tool.poetry.dependencies]
python = "^3.11"
faker = "^22.6.0"
typer = "^0.9.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
rich = "^13.7.0"
duckdb = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
ruff = "^0.3.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"


[tool.ruff]
line-length = 130
preview = true
output-format = "concise"

[tool.ruff.lint]
select = [ "E", "F", "W" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
